--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: SpawnerAdjuster
 main: com.sadmean.mc.SpawnerAdjuster.SpawnerAdjuster
-version: 1.2.0
+version: 1.2.1
 author: Choelian
-softdepend: [Permissions]
+softdepend: [Vault]
 permissions:
     SpawnerAdjuster.*:
         description: Gives access to all SpawnerAdjuster functions
