--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
   		<version>1.0.1-R1</version>
   	</dependency>
   	<dependency>
-  		<groupId>com.nijikokun.bukkit</groupId>
-  		<artifactId>Permissions</artifactId>
-  		<version>3.1.6</version>
+  		<groupId>net.milkbowl.vault.permission</groupId>
+  		<artifactId>Vault</artifactId>
+  		<version>1.2.0</version>
   	</dependency>
   </dependencies>
   <properties>
